@@ -23,6 +23,3 @@ src/lib/accerciser/plugin/plugin_manager.py
 src/lib/accerciser/plugin/view.py
 src/lib/accerciser/ui_manager.py
 
-# files added by intltool-prepare
-accerciser.desktop.in
-debian/accerciser/usr/share/applications/accerciser.desktop.in
