@@ -1,4 +1,3 @@
-accerciser.desktop.in
 macaroon/macaroon.desktop.in.in
 macaroon/macaroon/playback/keypress_mimic.py
 macaroon/macaroon/record/about.py
