@@ -1,3 +1,11 @@
+2007-07-31  Eitan Isaacson  <eitan@ascender.com>
+
+	* po/POTFILES.in: Removed weird automated addition.
+	* po/POTFILES.skip: Removed accerciser.desktop.in.
+	* src/lib/accerciser/plugin/message.py: Added an assertion test to 
+	fix bug #460071. I wish I understood what the root of the problem
+	is, but I can't seem to replicate this on my system.
+
 2007-07-30  Eitan Isaacson  <eitan@ascender.com>
 
 	* po/POTFILES.in: 
